# Graphics-Tool-Kit

./: .gitmodules  settings.gradle
app/src/main/cpp/: AppInstance.cpp  AppInstance.h  CMakeLists.txt  UNIX_AND_WINDOWS.cpp  native-lib.cpp
app/src/main/cpp/AndroidBase/: AppInstanceAndroidBase.cpp  AppInstanceAndroidBase.h  CMakeLists.txt
app/src/main/cpp/AppInstance/: AppInstance.cpp  AppInstance.h  native-lib.cpp
app/src/main/cpp/Application/: Application.cpp  Application.h  ApplicationLoader.cpp  ApplicationLoader.h  CMakeLists.txt  LifeCycle.cpp  LifeCycle.h
app/src/main/cpp/Applications/: Applications.h  CMakeLists.txt  GridViewTest.cpp  GridViewTest.h  LinearLayoutTest.cpp  LinearLayoutTest.h  TextViewTest.cpp  TextViewTest.h  cube.cpp  cube.h  imgui.cpp  imgui.h  test1.cpp  test1.h
app/src/main/cpp/DiligentAnyOpt/: AnyOpt.h  CMakeLists.txt
app/src/main/cpp/DiligentHelpers/: AnyOpt.cpp  AnyOpt.h  CMakeLists.txt  DiligentAppBase.cpp  DiligentAppBase.h  DrawTools.cpp  DrawTools.h  PipelineManager.cpp  PipelineManager.h  RenderTarget.cpp  RenderTarget.h
app/src/main/cpp/DiligentLibrary/: CMakeLists.txt  empty.cpp
app/src/main/cpp/Objects/: CMakeLists.txt  Cube.cpp  Cube.h  CubeOnTriangle.cpp  CubeOnTriangle.h  ObjectBase.cpp  ObjectBase.h  ObjectGroup.cpp  ObjectGroup.h  Objects.h  Position.h  Triangle.cpp  Triangle.h
app/src/main/cpp/Objects/Painters/: CMakeLists.txt  (+5 more)
app/src/main/cpp/PixelToNDC/: CMakeLists.txt  PixelToNDC.cpp  PixelToNDC.h
app/src/main/cpp/PlatformBase/: AppInstancePlatformBase.h  CMakeLists.txt
app/src/main/cpp/TimeEngine/: CMakeLists.txt  TimeEngine.cpp  TimeEngine.h
app/src/main/cpp/Utils/: Array.h  CMakeLists.txt  Log.cpp  Log.h  MemoryAllocator.h
app/src/main/cpp/VertexEngine/: CMakeLists.txt  PixelToNDC.h  VertexEngine.cpp  VertexEngine.h
app/src/main/cpp/Views/: CMakeLists.txt  CubeView.cpp  CubeView.h  DebugView.cpp  DebugView.h  GridView.cpp  GridView.h  LinearLayout.cpp  LinearLayout.h  Position.h  Rectangle.h  RootView.cpp  RootView.h  TriangleView.cpp  TriangleView.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h  Views.h
app/src/main/cpp/WINAPI_KERNEL/: CMakeLists.txt
app/src/main/cpp/android/: AppInstanceAndroidBase.cpp  AppInstanceAndroidBase.h  JVM_MANAGER.cpp  native-lib.cpp
app/src/main/cpp/helpers/: DiligentAppBase.cpp  DiligentAppBase.h
app/src/main/cpp/stb/: stb_sprintf.h
macOS/: .gitignore  CMakeLists.txt  Makefile  SYMLINK_CMAKE_PROJECT_cpp  SYMLINK_CMAKE_PROJECT_exampleCmakeDirectory  import_CMake_project.sh
macOS/IMPORTED_CMAKE_PROJECTS/cpp/: CMakeCache.txt  cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/DiligentEngine/DiligentCore/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/DiligentEngine/DiligentTools/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/DiligentHelpers/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/DiligentHelpers/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/DiligentHelpers/DiligentHelpers.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Kit.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/MotionEvent/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/MotionEvent/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/MotionEvent/MotionEvent.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/MultiTouch/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/MultiTouch/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/MultiTouch/DiligentLog/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/MultiTouch/MultiTouch.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Objects/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Objects/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Objects/Objects.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Objects/Views/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/PlatformBase/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/PlatformBase/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/PlatformBase/MacOSBase/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/PlatformBase/PlatformBase.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/TimeEngine/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/TimeEngine/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/TimeEngine/TimeEngine.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Utils/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Utils/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/Utils/Utils.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/VertexEngine/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/cpp/VertexEngine/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/cpp/VertexEngine/VertexEngine.xcodeproj/: project.pbxproj
macOS/IMPORTED_CMAKE_PROJECTS/cpp/WINAPI_KERNEL/: cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/exampleCmakeDirectory/: CMakeCache.txt  cmake_install.cmake
macOS/IMPORTED_CMAKE_PROJECTS/exampleCmakeDirectory/CMakeScripts/: ReRunCMake.make
macOS/IMPORTED_CMAKE_PROJECTS/exampleCmakeDirectory/ExampleProject.xcodeproj/: project.pbxproj
macOS/MacOS.xcodeproj/: project.pbxproj
macOS/MacOS.xcodeproj/project.xcworkspace/xcuserdata/smallville7123.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/MacOS.xcodeproj/xcuserdata/smallville7123.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macOS/MacOS.xcodeproj/xcuserdata/smallville7123.xcuserdatad/xcschemes/: xcschememanagement.plist
macOS/OpenGLApp/: AppDelegate.mm  GLEssentialsGLView.mm  OpenGLRenderer.h  OpenGLRenderer.mm
macOS/OpenGLApp_CMAKE_PROJECT/: AppDelegate.h  CMakeLists.txt  GLEssentialsGLView.h  GLEssentialsGLView.mm  OpenGLRenderer.h  OpenGLRenderer.mm  main.mm
macOS/OpenGLApp_CMAKE_PROJECT/Base.lproj/: MainMenu.xib
macOS/exampleCmakeDirectory/: CMakeLists.txt  render.h
(+204 files in other folders)
